fixed jumping header

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -15,6 +15,7 @@ body {
 }
 
 h1 {
+    padding-top: 5vw;
     text-align: center;
     color: #535353;
     font-size: 25px;
@@ -35,15 +36,10 @@ header {
     /* Primary color */
     background-image: linear-gradient(140deg, transparent 52%, rgb(71, 188, 117) 0%);
     z-index: 5;
-}
-.sticky + .content {
-    padding-top: 102px;
-}
-.sticky {
-    position: fixed;
     top: 0;
-    width: 100%;
+    position: fixed;
 }
+
 .topnav a {
     float: left;
     display: block;
@@ -96,7 +92,7 @@ header {
     background-image: url("images/splash3.png");
     background-position: 25% 0;
     position: absolute;
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     background-size: cover;
 
@@ -108,7 +104,7 @@ header {
     position: absolute;
     left: 0;
     top: 0;
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     background-size: cover;
 }
@@ -117,7 +113,7 @@ header {
     background-image: url("images/splash8.jpg");
     background-position: 75% 0;
     position: absolute;
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     background-size: cover;
 }
@@ -126,7 +122,7 @@ header {
     background-image: url("images/splash9.jpg");
     background-position: 80% 30%;
     position: absolute;
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     background-size: cover;
 }
@@ -135,7 +131,7 @@ header {
     background-image: url("images/splash10.jpg");
     background-position: 20% 0;
     position: absolute;
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     background-size: cover;
 }
@@ -143,13 +139,13 @@ header {
 
 .galleryContainer {
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     user-select: none;
 }
 
 .galleryContainer .slideShowContainer {
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     overflow: hidden;
     position: relative;
 }
